--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1427,19 +1427,19 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "갱 순위를 ${playerName}에 할당",
+ 	 	 	 	 	"trans": "${playerName}의 계급 바꾸기",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "갱 순위를 할당하는 것은 ${cost} btc의 비용이 들며 변경 사항을 확인하려면 게임 재시작이 필요합니다",
+ 	 	 	 	 	"trans": "계급을 바꾸는 데에는 ${cost} btc의 비용이 들며 계급을 확인하려면 게임을 다시 시작해야 합니다.",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
  	 	 	 	 	"label": {
- 	 	 	 	 	 	"trans": "순위 이름",
+ 	 	 	 	 	 	"trans": "계급 이름",
  	 	 	 	 	 	"eng": "Rank Name"
  	 	 	 	 	},
  	 	 	 	 	"error": {
@@ -1448,34 +1448,34 @@
  	 	 	 	 	 	 	 	"minLength",
  	 	 	 	 	 	 	 	"maxLength"
  	 	 	 	 	 	 	],
- 	 	 	 	 	 	 	"trans": "순위 이름은 ${minLength}과 ${maxLength} 문자 사이 여야합니다",
+ 	 	 	 	 	 	 	"trans": "계급 이름은 ${minLength} ~ ${maxLength} 글자로 작성해야 합니다.",
  	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
  	 	 	 	 	 	}
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "양수인",
+ 	 	 	 	 	 	"trans": "결정",
  	 	 	 	 	 	"eng": "Assign"
  	 	 	 	 	}
  	 	 	 	}
  	 	 	},
  	 	 	"playerPopup": {
  	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "프로필보기",
+ 	 	 	 	 	"trans": "프로필 보기",
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"assignRank": {
- 	 	 	 	 	"trans": "순위를 할당하십시오",
+ 	 	 	 	 	"trans": "계급 변경",
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "킥 플레이어",
+ 	 	 	 	 	"trans": "추방하기",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "당신의 갱단에서 이 플레이어를 추방하시겠습니까?",
+ 	 	 	 	"trans": "갱단에서 이 플레이어를 추방하시겠습니까?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1509,7 +1509,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"deleteGang": {
- 	 	 	 	"trans": "갱 삭제",
+ 	 	 	 	"trans": "갱 해산",
  	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
@@ -3070,11 +3070,11 @@
  	 	 	 	 	"eng": "\"Member\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "기본 채팅 프레임 (애니메이션 없음 및 특별한 색상 없음)",
+ 	 	 	 	 	"trans": "기본 채팅 프레임 (애니메이션과 특별한 색상 없음)",
  	 	 	 	 	"eng": "Basic Chat Frame (no animation & no special color)"
  	 	 	 	}
  	 	 	}
@@ -3086,7 +3086,7 @@
  	 	 	 	 	"eng": "\"Donator\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3106,7 +3106,7 @@
  	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3114,11 +3114,11 @@
  	 	 	 	 	"eng": "Gold chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "골드 프레임 프로필 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "골드 액자 프로필 (애니메이션 포함)",
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "맞춤형 자기소개 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3126,11 +3126,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱의 모토를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱의 이미지를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3146,7 +3146,7 @@
  	 	 	 	 	"eng": "\"Legendary\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3158,7 +3158,7 @@
  	 	 	 	 	"eng": "Purple Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "맞춤형 자기소개 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3166,11 +3166,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱의 모토를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱의 이미지를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3190,23 +3190,23 @@
  	 	 	 	 	"eng": "\"Cybernetic Potato\" donation title"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "프로필 사진 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "사이버네틱 감자가 되십시오",
+ 	 	 	 	 	"trans": "사이버네틱 감자로 변신!",
  	 	 	 	 	"eng": "Become a Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "감자 채팅 프레임 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "감자가 가득한 채팅 프레임 (애니메이션 포함)",
  	 	 	 	 	"eng": "Potato chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "감자 액자 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "감자가 가득한 액자 프로필 (애니메이션 포함)",
  	 	 	 	 	"eng": "Potato Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "맞춤형 자기소개 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
@@ -3214,11 +3214,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "갱의 모토를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"10": {
- 	 	 	 	 	"trans": "갱의 이미지를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"11": {
@@ -3226,7 +3226,7 @@
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	},
  	 	 	 	"12": {
- 	 	 	 	 	"trans": "제가 당신이 사이버네틱 감자가 될 수 있다고 말했었나요?",
+ 	 	 	 	 	"trans": "감자도스처럼 멋진 사이버네틱 감자가 되어보세요.",
  	 	 	 	 	"eng": "Did I mention you could be a Cybernetic Potato?"
  	 	 	 	}
  	 	 	}
@@ -3599,11 +3599,11 @@
  	 	},
  	 	"healing11": {
  	 	 	"name": {
- 	 	 	 	"trans": "명성 나노 의료용 봇",
+ 	 	 	 	"trans": "[의료] 프레스티지 나노 의료 로봇",
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "전투 상황에서 부상을 패치 할 수있는 사전 군사 사용을위한 주사 가능한 나노 기계",
+ 	 	 	 	"trans": "전투 상황에서의 피해를 회복할 수 있는 첨단 군사용 주사식 나노 기계, 전투 상황에서 부상을 치료하는 것에 쓰입니다.",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5853,23 +5853,23 @@
  	 	 	 	"trans": "초대",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "다른 선수들에게 당신의 갱에 초대하십시오.",
+ 	 	 	 	 	"trans": "다른 사람들을 갱단에 초대할 수 있게 합니다.",
  	 	 	 	 	"eng": "Invite other players to join your gang."
  	 	 	 	}
  	 	 	},
  	 	 	"kick": {
- 	 	 	 	"trans": "발 차기",
+ 	 	 	 	"trans": "추방",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "당신의 갱에서 다른 선수들을 걷어차십시오.",
+ 	 	 	 	 	"trans": "갱단 소속 유저를 갱단에서 추방할 수 있게 합니다.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
  	 	 	"manage": {
- 	 	 	 	"trans": "관리하다",
+ 	 	 	 	"trans": "관리",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "이 플레이어가 다른 플레이어의 허가를 관리하도록 허용하십시오",
+ 	 	 	 	 	"trans": "다른 갱단 인원의 권한을 조정할 수 있게 합니다.",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
  	 	 	}
