--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -400,12 +400,12 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Cấp độ in thấp",
+ 	 	 	 	 	"trans": "Cấp độ in quá thấp",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Tăng thứ hạng in của bạn để tạo ra vũ khí mạnh hơn bằng cách in thêm thiết bị bằng bản vẽ",
+ 	 	 	 	"trans": "Tăng cấp dộ in của bạn để tạo ra vũ khí mạnh hơn bằng cách in thêm thiết bị bằng bản vẽ",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -413,7 +413,7 @@
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
- 	 	 	 	"trans": "Slots nhanh chóng",
+ 	 	 	 	"trans": "Thanh nóng",
  	 	 	 	"eng": "Quick Slots"
  	 	 	},
  	 	 	"equipped": {
@@ -430,7 +430,7 @@
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Chọn một mục có thể sử dụng để liên kết với một khe nhanh",
+ 	 	 	 	 	"trans": "Chọn một mục có thể sử dụng để liên kết với một ô trên thanh nóng",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
@@ -1360,7 +1360,7 @@
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Bạn có chắc là bạn muốn hủy AFK và Đăng xuất của mình không? Tài nguyên được sử dụng để bắt đầu nhiệm vụ sẽ không được hoàn trả.",
+ 	 	 	 	 	"trans": "Bạn có chắc là bạn muốn hủy AFK và Đăng xuất không? Tài nguyên được sử dụng để bắt đầu nhiệm vụ sẽ không được hoàn trả.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -2550,11 +2550,11 @@
  	 	},
  	 	"m3Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Kẻ thù ăn mày",
+ 	 	 	 	"trans": "Kẻ thù ngạ quỷ",
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Tăng sát thương gây lên cho kẻ thuộc băng đảng ăn mày",
+ 	 	 	 	"trans": "Tăng sát thương gây lên cho kẻ thuộc băng đảng ngạ quỷ",
  	 	 	 	"eng": "Increases damage to Enemies of Scavengers gang"
  	 	 	}
  	 	},
@@ -2564,7 +2564,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Kẻ thù thuộc băng đảng ăn mày tăng sát thương gây ra cho bạn",
+ 	 	 	 	"trans": "Kẻ thù thuộc băng đảng ngạ quỷ tăng sát thương gây ra cho bạn",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
