feat: improve pt dialogs
work in progress

--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Por favor, insira seu lema de sua gangue",
+ 	 	 	 	 	 	"trans": "Por favor, insira o lema de sua gangue",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "Nenhuma gangue ocupou está área ainda",
+ 	 	 	 	 	"trans": "Nenhuma gangue ocupou esta área ainda",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Você encontrou uma caixa de saque bloqueada com teclado de cor, você deve ser capaz de desbloqueá-lo com a seqüência correta de cores.",
+ 	 	 	 	 	"trans": "Você encontrou uma caixa de saque bloqueada com teclado colorido, você deve ser capaz de desbloqueá-lo com a seqüência correta de cores.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -147,7 +147,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"countdownSubtitle": {
- 	 	 	 	 	"trans": "segundas",
+ 	 	 	 	 	"trans": "segundos",
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Pessoas da Ucrânia, Rússia e todo o mundo estão sofrendo porque a ambição de um homem. \\ N Faça amor exploração, não guerra.",
+ 	 	 	 	"trans": "Pessoas da Ucrânia, Rússia e todo o mundo estão sofrendo porque a ambição de um homem. \\ N Faça amor vulnerável, não guerra.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -226,7 +226,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "Aumentar a quantidade máxima de itens que você pode armazenar em seu Cofre para ${upgradeToSlot}",
+ 	 	 	 	"trans": "Aumente a quantidade máxima de itens que você pode armazenar em seu Cofre para ${upgradeToSlot}",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	},
  	 	 	"modal": {
@@ -239,16 +239,16 @@
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "Quanto gostaria de depositar?",
+ 	 	 	 	 	"trans": "Quanto você gostaria de depositar?",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "Quanto gostaria de retirar?",
+ 	 	 	 	 	"trans": "Quanto você gostaria de retirar?",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "Não é possivel retirar, sem saldo suficiente.",
+ 	 	 	 	"trans": "Não é possivel retirar, saldo suficiente.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Encontrou um antigo cofre trancado, parece haver um post-it com algum texto escrito nele.",
+ 	 	 	 	"trans": "Você encontrou um antigo cofre trancado, parece haver um post-it com algum texto escrito nele.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -476,7 +476,7 @@
  	 	 	 	 	 	"timeSkipMinutes",
  	 	 	 	 	 	"timeSkipCost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Global Skip (${timeSkipMinutes} min, custa ${timeSkipCost} unidades)",
+ 	 	 	 	 	"trans": "Avanço global (${timeSkipMinutes} min, custa ${timeSkipCost} unidades)",
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
@@ -630,7 +630,7 @@
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"unequip": {
- 	 	 	 	"trans": "Unequip",
+ 	 	 	 	"trans": "Desequipar",
  	 	 	 	"eng": "Unequip"
  	 	 	},
  	 	 	"use": {
