--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -5101,7 +5101,7 @@
  	 	 	 	"eng": "Explore ${zoneName}"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Si estás listo, prueba tu fuerza explorando una Mazmorra normal.\r\n                        ¡Recuerda comprar algún Objeto curativo! No podrás curarte tras las peleas en una Mazmorra",
+ 	 	 	 	"trans": "Si estás listo, pon a prueba tu fuerza explorando una Mazmorra normal.\r\n                        ¡Recuerda comprar algún Objeto curativo! No podrás curarte tras las peleas en una Mazmorra",
  	 	 	 	"eng": "Are you ready? you can test your strength out with normal dungeon, the easiest one.\r\n                        Remember to bring healing item! you won't heal after fights in dungeon"
  	 	 	}
  	 	},
@@ -5123,7 +5123,7 @@
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de botín esperándote!\r\n                        Se recomienda intentarlo con ayuda de otros Netrunners.",
+ 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de botines esperándote!\r\n                        Se recomienda intentarlo con ayuda de otros Netrunners.",
  	 	 	 	"eng": "Are you strong enough? try it out on Challenge Dungeon,\r\n                        there is a strong boss and tons of loot at the end waiting for you!\r\n                        Its recommended to attempt this with other players."
  	 	 	}
  	 	},
@@ -5158,7 +5158,7 @@
  	 	 	"eng": "Send Invite To Chat"
  	 	},
  	 	"buttonTut": {
- 	 	 	"trans": "¿Crees que eres lo suficientemente fuerte? ¡Desafía a los enemigos más fuertes en la Mazmorra! \r\n                         ¡Recuerda comprar un Objeto curativo! No recuperas HP después de una pelea en la Mazmorra",
+ 	 	 	"trans": "¿Crees que eres lo suficientemente fuerte? ¡Desafía a los enemigos más fuertes en la Mazmorra! \r\n                         ¡Recuerda comprar algunos objetos curativos! No recuperarás HP después de una pelea en la Mazmorra",
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	}
  	},
@@ -5166,13 +5166,13 @@
  	 	"ui": {
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "No puedes usar el Objeto durante peleas callejeras, solo está disponible en las Mazmorras",
+ 	 	 	 	 	"trans": "No puedes usar el objeto durante peleas callejeras, solo está disponible en las Mazmorras",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	},
  	 	 	"autoScrap": {
  	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "No hay Objetos para auto-desmantelar",
+ 	 	 	 	 	"trans": "No hay objetos para auto-desmantelar",
  	 	 	 	 	"eng": "No item to auto scrap"
  	 	 	 	}
  	 	 	}
@@ -5329,7 +5329,7 @@
  	 	 	}
  	 	},
  	 	"notEnoughMoney": {
- 	 	 	"trans": "BTC insuficiente",
+ 	 	 	"trans": "BTC insuficientes",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceConfirm": {
@@ -5345,7 +5345,7 @@
  	 	 	"vars": [
  	 	 	 	"total"
  	 	 	],
- 	 	 	"trans": "Si todos los Objetos se venden, vas a ganar ${total} BTC",
+ 	 	 	"trans": "Si todos los objetos se venden, vas a ganar ${total} BTC",
  	 	 	"eng": "If all items are sold, you will earn ${total} BitCoins"
  	 	},
  	 	"sellAmountModalTitle": {
@@ -5414,7 +5414,7 @@
  	 	 	 	"likerName",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "${likerName} te ha enviado ${amount} Respetos por tu Salto",
+ 	 	 	"trans": "${likerName} te ha enviado ${amount} respetos por tu Salto",
  	 	 	"eng": "${likerName} has send you ${amount} respects for your skip"
  	 	}
  	},
@@ -5530,7 +5530,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Entiendo y nunca haré spam ni romperé alguna regla del Chat",
+ 	 	 	 	 	"trans": "Entiendo y nunca haré spam ni romperé ninguna regla del Chat",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -5551,11 +5551,11 @@
  	 	},
  	 	"contributionModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "Contenido Contribuido por un jugador",
+ 	 	 	 	"trans": "Contenido contribuido por un jugador",
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Puede contribuir al contenido como este y muchos más también editando los archivos de configuración en nuestra página de GitHub.",
+ 	 	 	 	"trans": "Puede contribuir al contenido como este y muchos más editando los archivos de configuración en nuestra página de GitHub.",
  	 	 	 	"eng": "You can contribute to content like this and many more too by editing the config files in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -5606,7 +5606,7 @@
  	 	 	},
  	 	 	"confirmButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Entiendo",
+ 	 	 	 	 	"trans": "Lo entiendo",
  	 	 	 	 	"eng": "I understand"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5647,7 +5647,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Felicidades, ¡has subido de Nivel tu ${levelName}!",
+ 	 	 	 	"trans": "Felicidades, ¡has subido de nivel tu ${levelName}!",
  	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
@@ -5676,7 +5676,7 @@
  	 	 	},
  	 	 	"goodReview": {
  	 	 	 	"title1": {
- 	 	 	 	 	"trans": "Wow, muchas gracias! Estoy honrado, por favor, deja tu opinión en la página de la tienda :)",
+ 	 	 	 	 	"trans": "¡Wow, muchas gracias! Estoy honrado, por favor, deja tu opinión en la página de la tienda :)",
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
@@ -5700,7 +5700,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Puedes ver el tutorial completo en Perfil > Tutoriales",
+ 	 	 	 	 	"trans": "Puedes ver el tutorial completo en la pestaña de Perfil > Tutoriales",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
@@ -5734,7 +5734,7 @@
  	},
  	"dungeonList": {
  	 	"newbieTip": {
- 	 	 	"trans": "No tecurarás después de cada pelea en la mazmorra, recuerda usar tus objetos curativos.",
+ 	 	 	"trans": "No te curarás después de cada pelea en la mazmorra, recuerda usar tus objetos curativos.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
  	 	}
  	},
@@ -5752,7 +5752,7 @@
  	 	 	 	"trans": "Patada",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Patea a otros jugadores de tu pandilla.",
+ 	 	 	 	 	"trans": "Expulsa a otros jugadores de tu pandilla.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
