--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -31,14 +31,14 @@
  	 	"clan": {
  	 	 	"selectDepositAmount": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Silakan masukkan jumlah yang ingin kamu deposit",
+ 	 	 	 	 	"trans": "Silakan masukkan jumlah yang ingin kamu setorkan",
  	 	 	 	 	"eng": "Please enter amount you want to deposit"
  	 	 	 	},
  	 	 	 	"detail": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin akan disetorkan ke akun geng Anda, ini tidak dapat dikembalikan",
+ 	 	 	 	 	"trans": "${amount} bitcoin akan disetorkan ke akun geng Anda, tindakan ini tidak dapat dikembalikan",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -54,7 +54,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Edit Moto Geng",
+ 	 	 	 	 	"trans": "Edit Motto Geng",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konten ini dikontribusikan oleh masyarakat. Klik di sini untuk menyumbangkan konten Anda sendiri.",
+ 	 	 	 	"trans": "Konten ini disumbangkan oleh komunitas. Klik di sini untuk menyumbangkan konten Anda sendiri.",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Anda menemukan kotak rampasan yang dikunci dengan keypad warna, Anda harus dapat membukanya dengan urutan warna yang benar.",
+ 	 	 	 	 	"trans": "Anda menemukan kotak rampasan yang dikunci dengan keypad berwarna, Anda harus dapat membukanya dengan urutan warna yang benar.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Orang-orang Ukraina, Rusia dan seluruh dunia menderita karena ambisi satu orang. \\ N bercinta eksploitasi, bukan perang.",
+ 	 	 	 	"trans": "Orang-orang Ukraina, Rusia dan seluruh dunia menderita karena ambisi satu orang. \\n Exploitasi cinta, bukan perang.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -219,7 +219,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "tingkatkan ke ${upgradeToSlot} slot",
+ 	 	 	 	"trans": "TINGKATKAN KE ${upgradeToSlot} SLOT",
  	 	 	 	"eng": "UPGRADE TO ${upgradeToSlot} SLOTS"
  	 	 	},
  	 	 	"upgradeSlotDesc": {
@@ -321,7 +321,7 @@
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "Tolong jangan mengirim pesan singkat, coba tulis kalimat yang lebih lama.",
+ 	 	 	 	"trans": "Tolong jangan mengirim pesan singkat, coba tuliskan kalimat yang lebih panjang.",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
@@ -358,7 +358,7 @@
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
- 	 	 	 	 	"trans": "Menyegarkan sekarang",
+ 	 	 	 	 	"trans": "Refresh Sekarang",
  	 	 	 	 	"eng": "Refresh Now"
  	 	 	 	}
  	 	 	}
@@ -413,7 +413,7 @@
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
- 	 	 	 	"trans": "Slot cepat",
+ 	 	 	 	"trans": "Slot Cepat",
  	 	 	 	"eng": "Quick Slots"
  	 	 	},
  	 	 	"equipped": {
@@ -441,7 +441,7 @@
  	 	 	 	"eng": "All Apps"
  	 	 	},
  	 	 	"dungeonList": {
- 	 	 	 	"trans": "Daftar Rubanah",
+ 	 	 	 	"trans": "Daftar Dungeon",
  	 	 	 	"eng": "Dungeon List"
  	 	 	},
  	 	 	"links": {
@@ -503,7 +503,7 @@
  	 	 	},
  	 	 	"confirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Konfirmasikan Penggunaan Lewati?",
+ 	 	 	 	 	"trans": "Yakin menggunakan Skip?",
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -546,7 +546,7 @@
  	 	 	},
  	 	 	"autoScrap": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Otomatis scrap",
+ 	 	 	 	 	"trans": "Scrap Otomatis",
  	 	 	 	 	"eng": "Auto Scrap"
  	 	 	 	}
  	 	 	},
@@ -574,7 +574,7 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Tidak ada pengetahuan komunitas untuk item ini, jadilah yang pertama buat untuk itu.",
+ 	 	 	 	 	"trans": "Belum ada lore komunitas untuk item ini, jadilah orang pertama yang membuatnya.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
@@ -584,7 +584,7 @@
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Buka Pengetahuan Komunitas untuk item ini",
+ 	 	 	 	 	"trans": "Buka lore komunitas untuk item ini",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
@@ -594,7 +594,7 @@
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Edit pengetahuan komunitas ini",
+ 	 	 	 	 	"trans": "Ubah lore komunitas ini",
  	 	 	 	 	"eng": "Edit this community lore"
  	 	 	 	}
  	 	 	}
@@ -606,7 +606,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Barang ini sedang rusak, bawa ke Toko Senjata untuk diperbaiki",
+ 	 	 	 	 	"trans": "Barang ini rusak, bawa ke Toko Senjata untuk diperbaiki",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -618,7 +618,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AOE] area efek, efek dari item ini akan diterima oleh sekutu dalam satu pertempuran dengan Anda.",
+ 	 	 	 	"trans": "[AOE] Efek Area, efek dari item ini akan diterima oleh sekutu dalam satu pertempuran dengan Anda.",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -663,7 +663,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "Ini akan mengatur ulang semua kalibrasi pada itemmu, juga membuatnya dapat dijual lagi. \n       Apakah Kamu yakin ingin melanjutkan?",
+ 	 	 	 	 	"trans": "Melakukan ini akan mengatur ulang semua kalibrasi pada itemmu, hal ini juga membuatnya dapat dijual lagi. \n       Apakah Kamu yakin ingin melanjutkan?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "Pengaturan Ulang",
@@ -680,7 +680,7 @@
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "kamu dapat memperoleh kunci rahasia dari Rubanah",
+ 	 	 	 	"trans": "kamu dapat memperoleh kunci rahasia dari Dungeon",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -705,7 +705,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"hiddenCount"
  	 	 	 	],
- 	 	 	 	"trans": "${hiddenCount} Lebih banyak interaksi dapat dibuka di lokasi ini, naik tingkat untuk membuka kunci mereka.",
+ 	 	 	 	"trans": "${hiddenCount} Lebih banyak interaksi dapat dibuka di lokasi ini, naikkan tingkat untuk membuka kunci mereka.",
  	 	 	 	"eng": "${hiddenCount} more interactables can be unlocked at this location, level up to unlock them."
  	 	 	},
  	 	 	"travel": {
@@ -715,14 +715,14 @@
  	 	},
  	 	"npc": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "Ini belum bisa dibuka, coba tingkatkan tingkatmu",
+ 	 	 	 	"trans": "Ini belum bisa dibuka, coba naikkan tingkatanmu",
  	 	 	 	"eng": "This is not unlocked yet, try leveling up your character"
  	 	 	},
  	 	 	"repairItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Perbaiki semua barang untuk (${repairFee} Bitcoin)",
+ 	 	 	 	"trans": "Perbaiki semua barang dengan (${repairFee} Bitcoin)",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"molecularPrinter": {
@@ -809,7 +809,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "file dibuat di ${date}",
+ 	 	 	 	"trans": "file dibuat pada ${date}",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
@@ -826,7 +826,7 @@
  	 	 	 	 	"eng": "Kick"
  	 	 	 	},
  	 	 	 	"editPermissions": {
- 	 	 	 	 	"trans": "Permissions",
+ 	 	 	 	 	"trans": "Izin",
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
@@ -848,7 +848,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
- 	 	 	 	 	"trans": "Undang bergabung ke Geng",
+ 	 	 	 	 	"trans": "Undang untuk bergabung ke Geng",
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
@@ -860,7 +860,7 @@
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
- 	 	 	 	 	"trans": "Beri Street Cred ",
+ 	 	 	 	 	"trans": "Beri Reputasi Jalanan",
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	}
  	 	 	},
@@ -876,7 +876,7 @@
  	 	"modal": {
  	 	 	"changePicture": {
  	 	 	 	"confirm": {
- 	 	 	 	 	"trans": "saya mengerti",
+ 	 	 	 	 	"trans": "Saya mengerti",
  	 	 	 	 	"eng": "I understand"
  	 	 	 	}
  	 	 	},
@@ -952,7 +952,7 @@
  	 	 	},
  	 	 	"tierSelection": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Keanehan",
+ 	 	 	 	 	"trans": "Tingkat Kelangkaan",
  	 	 	 	 	"eng": "Rarity"
  	 	 	 	}
  	 	 	},
@@ -961,7 +961,7 @@
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
- 	 	 	 	"trans": "Pembelian",
+ 	 	 	 	"trans": "Beli",
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
@@ -981,7 +981,7 @@
  	 	},
  	 	"afkTask": {
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "Tugas akan berlanjut bahkan jika Anda menutup permainan",
+ 	 	 	 	"trans": "Tugas akan berlanjut meski Anda menutup permainan",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
