--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1434,7 +1434,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "ギャングのランクを割り当てるには${cost} btcの費用がかかり、変化を確認するにはゲームの再起動が必要です",
+ 	 	 	 	 	"trans": "ギャングランクを割り当てるには${cost} btcの費用がかかります. また, 変更を確認するにはゲームの再起動が必要です",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
@@ -1448,14 +1448,14 @@
  	 	 	 	 	 	 	 	"minLength",
  	 	 	 	 	 	 	 	"maxLength"
  	 	 	 	 	 	 	],
- 	 	 	 	 	 	 	"trans": "ランク名は${minLength}と${maxLength}文字の間でなければなりません",
+ 	 	 	 	 	 	 	"trans": "ランク名は${minLength}文字以上${maxLength}以下にしてください",
  	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
  	 	 	 	 	 	}
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "割当",
+ 	 	 	 	 	 	"trans": "割り当てる",
  	 	 	 	 	 	"eng": "Assign"
  	 	 	 	 	}
  	 	 	 	}
@@ -1466,7 +1466,7 @@
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"assignRank": {
- 	 	 	 	 	"trans": "ランクを割り当てます",
+ 	 	 	 	 	"trans": "ランクを割り当てる",
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
@@ -1509,7 +1509,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"deleteGang": {
- 	 	 	 	"trans": "ギャングを削除します",
+ 	 	 	 	"trans": "ギャングを削除",
  	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
@@ -3573,7 +3573,7 @@
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍用機密の注射用ナノマシン. 戦闘中に怪我を治療することができる.",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3583,7 +3583,7 @@
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍用先行使用の注射用ナノマシン. 戦闘中に怪我を治療することができる.",
+ 	 	 	 	"trans": "軍で使用されている, 前衛技術の駆使された注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3593,7 +3593,7 @@
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍用先行使用の注射用ナノマシン. 戦闘中に怪我を治療することができる.",
+ 	 	 	 	"trans": "軍で使用されている, 前衛技術の駆使された注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3603,7 +3603,7 @@
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "前払いの軍事使用のための注射可能なナノマシン、戦闘状況での負傷にパッチを当てることができる",
+ 	 	 	 	"trans": "軍で使用されている, 前衛技術の駆使された注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -5958,7 +5958,7 @@
  	 	 	 	"trans": "招待",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "他のプレイヤーを招待してギャングに参加してください。",
+ 	 	 	 	 	"trans": "他のプレイヤーをあなたのギャングに招待します.",
  	 	 	 	 	"eng": "Invite other players to join your gang."
  	 	 	 	}
  	 	 	},
@@ -5966,7 +5966,7 @@
  	 	 	 	"trans": "キック",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "ギャングから他のプレイヤーを蹴ってください。",
+ 	 	 	 	 	"trans": "ギャングから他のプレイヤーを除名します.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
@@ -5974,7 +5974,7 @@
  	 	 	 	"trans": "管理",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "このプレーヤーが他のプレイヤーの許可を管理できるようにします",
+ 	 	 	 	 	"trans": "このプレーヤーが他のプレイヤーの役職を管理できるようにします",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
  	 	 	}
